:construction: protocol 模块 build.gradle 改进 & protocol 移除对 common 模块依赖 & common 模块中的 LiteJsWebView 迁移至 base

--- a/lib_protocol/src/main/res/layout/protocol_activity_web_container.xml
+++ b/lib_protocol/src/main/res/layout/protocol_activity_web_container.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true"
     tools:context=".activity.WebContainerActivity">
 
-    <com.mredrock.cyxbs.common.webView.LiteJsWebView
+    <com.mredrock.cyxbs.lib.base.webView.LiteJsWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
