--- a/module_mine/src/main/res/layout/mine_activity_feedback_detail.xml
+++ b/module_mine/src/main/res/layout/mine_activity_feedback_detail.xml
@@ -39,7 +39,7 @@
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toBottomOf="@+id/mine_relativelayout2" />-->
 
-        <com.mredrock.cyxbs.common.webView.LiteJsWebView
+        <com.mredrock.cyxbs.lib.base.webView.LiteJsWebView
             android:id="@+id/tv_detail_content"
             android:layout_width="0dp"
             android:layout_height="0dp"
