--- a/module_grades/src/main/res/layout/grades_activity_container.xml
+++ b/module_grades/src/main/res/layout/grades_activity_container.xml
@@ -40,7 +40,7 @@
                 android:layout_height="match_parent"
                 android:visibility="visible" />
 
-            <com.mredrock.cyxbs.common.webView.LiteJsWebView
+            <com.mredrock.cyxbs.lib.base.webView.LiteJsWebView
                 android:id="@+id/wv_exam_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
