--- a/module_course/src/main/res/layout/course_rv_item_show_stu_result.xml
+++ b/module_course/src/main/res/layout/course_rv_item_show_stu_result.xml
@@ -4,17 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="1dp"
     android:layout_width="match_parent"
-    android:layout_height="77dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/course_iv_item_show_stu_result_avatar"
-        android:src="@drawable/config_ic_default_avatar"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/config_ic_default_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -34,15 +35,20 @@
 
     <TextView
         android:id="@+id/course_tv_item_show_stu_result_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         android:textColor="@color/config_level_two_font_color"
         android:textSize="13sp"
-        android:layout_gravity="bottom|start"
-        app:layout_constraintTop_toBottomOf="@+id/course_tv_item_show_stu_result_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/course_view_item_show_stu_result_link"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/course_tv_item_show_stu_result_name"
-        app:layout_constraintBottom_toBottomOf="@+id/course_iv_item_show_stu_result_avatar"
-        tools:text="软件工程" />
+        app:layout_constraintTop_toBottomOf="@+id/course_tv_item_show_stu_result_name"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程软件工程" />
 
     <TextView
         android:id="@+id/course_tv_item_show_stu_result_num"
@@ -68,10 +74,10 @@
 
     <ImageView
         android:id="@+id/course_iv_item_show_stu_result_link"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="1dp"
         app:layout_constraintTop_toTopOf="@id/course_tv_item_show_stu_result_content"
-        app:layout_constraintBottom_toBottomOf="@id/course_tv_item_show_stu_result_content"
         app:layout_constraintEnd_toEndOf="@id/course_tv_item_show_stu_result_num"
         tools:ignore="ContentDescription"
         tools:src="@drawable/course_ic_find_course_link_head_no"/>
