--- a/cyxbs-pages/home/src/androidMain/res/drawable-night/home_ic_fairground_unselectored.xml
+++ b/cyxbs-pages/home/src/androidMain/res/drawable-night/home_ic_fairground_unselectored.xml
@@ -7,17 +7,17 @@
       android:pathData="M7,9.659C7,8.397 8.155,7.451 9.392,7.698L18.392,9.498C19.327,9.685 20,10.506 20,11.459V22C20,23.105 19.105,24 18,24H9C7.895,24 7,23.105 7,22V9.659Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:strokeColor="#a9bbd7"/>
+      android:strokeColor="#5b585c"/>
   <path
       android:pathData="M3,1L9,1A2,2 0,0 1,11 3L11,22A2,2 0,0 1,9 24L3,24A2,2 0,0 1,1 22L1,3A2,2 0,0 1,3 1z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="@color/config_common_background_color"
-      android:strokeColor="#a9bbd7"/>
+      android:strokeColor="#5b585c"/>
   <path
       android:pathData="M4,7L8,7A1,1 0,0 1,9 8L9,8A1,1 0,0 1,8 9L4,9A1,1 0,0 1,3 8L3,8A1,1 0,0 1,4 7z"
-      android:fillColor="#a9bbd7"/>
+      android:fillColor="#5b585c"/>
   <path
       android:pathData="M4,12L8,12A1,1 0,0 1,9 13L9,13A1,1 0,0 1,8 14L4,14A1,1 0,0 1,3 13L3,13A1,1 0,0 1,4 12z"
-      android:fillColor="#a9bbd7"/>
+      android:fillColor="#5b585c"/>
 </vector>
