:recycle: crash 模块重构，减轻功能，移动至 base 模块

--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_feedback_center.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_feedback_center.xml
@@ -135,7 +135,7 @@
                 android:id="@+id/tv_qq_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mine_feedback_center_qq_num"
+                tools:text="123456"
                 android:textColor="#0BCCF0"
                 android:textSize="11sp" />
         </LinearLayout>
