--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -4,10 +4,10 @@
 <!--
 TODO 以后不要再把颜色写在这里面 ！！！
  写到自己的模块里面去，该文件将逐步分离这些颜色
- 如果你正在重构某个模块，请把这个里面对应的颜色删除后移到你的模块里，但如果是共用的颜色，放在 lib_config 中 (使用 Alt + F7 可以查看被哪些模块引用)
+ 如果你正在重构某个模块，请把这个里面对应的颜色删除后移到你的模块里，但如果是共用的颜色，放在 config 中 (使用 Alt + F7 可以查看被哪些模块引用)
 -->
 
-    <!--TODO 这个颜色已移植到 lib_config 中，common 模块中该颜色不再使用！！！-->
+    <!--TODO 这个颜色已移植到 config 中，common 模块中该颜色不再使用！！！-->
     <!--整体灰色背景-->
     <color name="common_window_background">#F2F3F8</color>
     <!--    整体淡灰二级背景-->
@@ -25,7 +25,7 @@ TODO 以后不要再把颜色写在这里面 ！！！
     <color name="common_transparent_background">#00000000</color>
 
 
-    <!--TODO 这个字体颜色已移植到 lib_config 中，common 模块中该颜色不再使用！！！-->
+    <!--TODO 这个字体颜色已移植到 config 中，common 模块中该颜色不再使用！！！-->
     <!--主要字体颜色分以下四种，下列按照蓝色由深到浅排序，要用自取-->
     <!--一级字体颜色-->
     <color name="common_level_one_font_color">#112C54</color>
@@ -40,10 +40,10 @@ TODO 以后不要再把颜色写在这里面 ！！！
 
 
 
-    <!--TODO 这个字体颜色已移植到 lib_config 中，common 模块中该颜色不再使用！！！-->
+    <!--TODO 这个字体颜色已移植到 config 中，common 模块中该颜色不再使用！！！-->
     <!--60%透明度的二级字体-->
     <color name="common_alpha_level_two_font_color">#9915315B</color>
-    <!--TODO 这个字体颜色已移植到 lib_config 中，common 模块中该颜色不再使用！！！-->
+    <!--TODO 这个字体颜色已移植到 config 中，common 模块中该颜色不再使用！！！-->
     <!--44%透明度的二级字体-->
     <color name="common_alpha_forty_level_two_font_color">#7015315B</color>
 
@@ -137,7 +137,7 @@ TODO 以后不要再把颜色写在这里面 ！！！
     <color name="common_no_class_select_student_page_background">#ffffff
     </color>
 
-    <!--不是课表背景，而是整个应用主页的背景色，目前该值已经移植到 lib_config 中，名字为：config_common_background_color-->
+    <!--不是课表背景，而是整个应用主页的背景色，目前该值已经移植到 config 中，名字为：config_common_background_color-->
     <color name="common_curriculum_background_color">#ffffff</color>
 
     <!--事务备忘条纹-->
