--- a/cyxbs-pages/mine/src/androidMain/res/drawable/mine_shape_dialog_tip_positive.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/drawable/mine_shape_dialog_tip_positive.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/map_dialog_tip_positive_background_color" />
+    <solid android:color="#4B44E5" />
     <corners android:radius="17dp" />
     <size android:height="34dp" android:width="93dp"/>
 </shape>
