--- a/lib_common/src/main/res/values-night/colors.xml
+++ b/lib_common/src/main/res/values-night/colors.xml
@@ -16,6 +16,7 @@ TODO 以后不要再把颜色写在这里面 ！！！
     <!--    纯白色背景和纯白色字体-->
     <!--替换为 config_white_black-->
     <color name="common_white_background">#000000</color>
+    <!--替换为 @android:color/white-->
     <color name="common_white_font_color">#ffffff</color>
     <!--    启动页颜色-->
     <color name="common_start_page_white_color">#333333</color>
@@ -55,13 +56,11 @@ TODO 以后不要再把颜色写在这里面 ！！！
     <color name="common_blue_sign_text_color">#839BFA</color>
     <!--    分割线颜色-->
     <color name="common_sever_view_color">#35F8F9FC</color>
-    <color name="common_blue_button">#2921D1</color>
 
     <!--    按钮颜色-->
     <color name="common_grey_button">#E1DFE0</color>
     <color name="common_grey_button_text">#C3C0C1</color>
     <color name="common_grey_text">#C4C2C2</color>
-    <color name="common_switch_off">#5A5A5A</color>
 
     <!--    tab_layout颜色-->
     <color name="common_mine_tab_layout_text_unselected">#9AF0F0F2</color>
