--- a/cyxbs-components/config/src/androidMain/res/values/colors.xml
+++ b/cyxbs-components/config/src/androidMain/res/values/colors.xml
@@ -61,4 +61,6 @@
     <!--    图片选择器状态栏和toolbar颜色-->
     <color name="config_photo_select_status_color">#788EFA</color>
 
+    <color name="config_blue_button">#465FFF</color>
+    <color name="config_switch_off">#C3D4EE</color>
 </resources>
