--- a/cyxbs-pages/notification/src/androidMain/res/drawable/notification_shape_switch_thumb_grey.xml
+++ b/cyxbs-pages/notification/src/androidMain/res/drawable/notification_shape_switch_thumb_grey.xml
@@ -3,8 +3,8 @@
     android:shape="oval">
     <size android:height="30dp" android:width="30dp" />
 
-    <solid android:color="@color/common_white_font_color" />
+    <solid android:color="@android:color/white" />
     <stroke android:width="2dp"
-        android:color="@color/common_switch_off" />
+        android:color="@color/config_switch_off" />
 
 </shape>
