--- a/cyxbs-pages/declare/src/androidMain/res/layout/declare_activity_post.xml
+++ b/cyxbs-pages/declare/src/androidMain/res/layout/declare_activity_post.xml
@@ -1,113 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/config_window_background"
+    android:orientation="vertical">
 
-    <data>
-
-    </data>
-
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/config_window_background"
-        android:orientation="vertical"
-        tools:context=".pages.post.PostActivity">
+        android:layout_height="?android:actionBarSize">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <ImageButton
+            android:id="@+id/declare_iv_toolbar_arrow_left"
+            android:layout_width="10dp"
+            android:layout_height="16dp"
+            android:src="@drawable/declare_ic_home_arrow_left"
+            tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/declare_home_toolbar_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="31dp"
+            android:layout_marginStart="32dp"
+            android:text="@string/declare_posted_title"
+            android:textColor="@color/config_level_three_font_color"
+            android:textSize="22sp" />
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginVertical="8dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="6dp">
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize">
+            android:background="@color/config_common_background_color"
+            android:layout_height="wrap_content">
 
-            <ImageButton
-                android:id="@+id/declare_iv_toolbar_arrow_left"
-                android:layout_width="10dp"
-                android:layout_height="16dp"
-                android:src="@drawable/declare_ic_home_arrow_left"
-                tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-            <TextView
-                android:id="@+id/declare_home_toolbar_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="31dp"
-                android:layout_marginStart="32dp"
-                android:text="@string/declare_posted_title"
-                android:textColor="@color/config_level_three_font_color"
-                android:textSize="22sp" />
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginVertical="8dp"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="6dp">
-
-            <androidx.core.widget.NestedScrollView
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:background="@color/config_common_background_color"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="26dp"
+                android:layout_marginVertical="36dp"
+                android:orientation="vertical">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/declare_input_bg"
+                    android:theme="@style/Theme.Material3.DayNight"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    app:hintAnimationEnabled="false"
+                    app:hintEnabled="false">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_topic"
+                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:ellipsize="end"
+                        android:focusable="false"
+                        android:gravity="center"
+                        android:hint="@string/declare_please_input_topic"
+                        android:maxLines="1"
+                        android:padding="0dp"
+                        android:textColor="@color/config_level_three_font_color"
+                        android:textColorHint="@color/config_alpha_level_two_font_color" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_topic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="26dp"
-                    android:layout_marginVertical="36dp"
-                    android:orientation="vertical">
+                    android:layout_marginVertical="16dp" />
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:background="@drawable/declare_input_bg"
-                        android:theme="@style/Theme.Material3.DayNight"
-                        app:boxStrokeWidth="0dp"
-                        app:boxStrokeWidthFocused="0dp"
-                        app:hintAnimationEnabled="false"
-                        app:hintEnabled="false">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_submit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginVertical="8dp"
+                    android:background="@drawable/declare_ic_btn_background_inactive"
+                    android:paddingHorizontal="32dp"
+                    android:text="@string/declare_submit_edit"
+                    android:textColor="@color/config_white_black"
+                    android:textSize="18sp" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_topic"
-                            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:ellipsize="end"
-                            android:focusable="false"
-                            android:gravity="center"
-                            android:hint="@string/declare_please_input_topic"
-                            android:maxLines="1"
-                            android:padding="0dp"
-                            android:textColor="@color/config_level_three_font_color"
-                            android:textColorHint="@color/config_alpha_level_two_font_color" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    </com.google.android.material.textfield.TextInputLayout>
+        </androidx.core.widget.NestedScrollView>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_topic"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="16dp" />
+    </androidx.cardview.widget.CardView>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_submit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginVertical="8dp"
-                        android:background="@drawable/declare_ic_btn_background_inactive"
-                        android:paddingHorizontal="32dp"
-                        android:text="@string/declare_submit_edit"
-                        android:textColor="@color/config_white_black"
-                        android:textSize="18sp" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-            </androidx.core.widget.NestedScrollView>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
