--- a/cyxbs-pages/declare/src/androidMain/res/layout/declare_item_section.xml
+++ b/cyxbs-pages/declare/src/androidMain/res/layout/declare_item_section.xml
@@ -1,43 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingVertical="10dp">
 
-    <data>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/siv_rm"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="18dp"
+        app:shapeAppearance="@style/ConfigShapeableImageViewCircleStyle"
+        app:srcCompat="@drawable/declare_ic_remove" />
 
-    </data>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="10dp">
+        android:layout_height="38dp"
+        android:background="@drawable/declare_input_bg_2"
+        android:ellipsize="end"
+        android:focusable="false"
+        android:gravity="center"
+        android:layout_gravity="center_vertical"
+        android:inputType="textNoSuggestions"
+        android:maxLines="1"
+        android:padding="0dp"
+        android:textColor="#CC15315B"
+        android:textColorHint="#8015315B"
+        android:textSize="14sp"
+        tools:hint="选项" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/siv_rm"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="18dp"
-            app:shapeAppearance="@style/ConfigShapeableImageViewCircleStyle"
-            app:srcCompat="@drawable/declare_ic_remove" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/et"
-                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:background="@drawable/declare_input_bg_2"
-                android:ellipsize="end"
-                android:focusable="false"
-                android:gravity="center"
-                android:layout_gravity="center_vertical"
-                android:inputType="textNoSuggestions"
-                android:maxLines="1"
-                android:padding="0dp"
-                android:textColor="#CC15315B"
-                android:textColorHint="#8015315B"
-                android:textSize="14sp"
-                tools:hint="选项" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</layout>
+</androidx.appcompat.widget.LinearLayoutCompat>
