--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_recycle_item_banner_add.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_recycle_item_banner_add.xml
@@ -1,45 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingTop="7dp"
+    android:paddingEnd="7dp"
+    android:paddingBottom="4dp"
+    android:paddingStart="4dp">
 
-    <data>
-
-        <variable
-            name="holder"
-            type="com.cyxbs.pages.mine.page.feedback.adapter.rv.RvHolder" />
-
-        <variable
-            name="data"
-            type="com.cyxbs.pages.mine.page.feedback.history.list.adapter.PicBannerBinderAdd" />
-
-
-    </data>
-
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="7dp"
-        android:paddingEnd="7dp"
-        android:paddingBottom="4dp"
-        android:paddingStart="4dp">
+        android:background="@color/common_transparent_background"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="5dp">
 
-        <androidx.cardview.widget.CardView
+        <com.cyxbs.pages.mine.page.feedback.widget.SquareImageView
+            android:id="@+id/iv_banner_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/common_transparent_background"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="5dp">
+            android:background="@color/mine_feedback_add_bg_color"
+            android:elevation="1dp"
+            android:padding="34dp"
+            app:srcCompat="@drawable/mine_ic_feedback_add_more" />
 
-            <com.cyxbs.pages.mine.page.feedback.widget.SquareImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/mine_feedback_add_bg_color"
-                android:elevation="1dp"
-                android:onClick="@{(v)->data.onClicked(v,holder)}"
-                android:padding="34dp"
-                app:srcCompat="@drawable/mine_ic_feedback_add_more" />
+    </androidx.cardview.widget.CardView>
 
-        </androidx.cardview.widget.CardView>
-
-    </FrameLayout>
-</layout>
+</FrameLayout>
