:building_construction: 新增 view 模块，用于分离 config 模块中控件相关，解决自定义 View 需要依赖 utils 模块的问题

--- a/cyxbs-pages/discover/src/androidMain/res/layout/discover_activity_roller_view.xml
+++ b/cyxbs-pages/discover/src/androidMain/res/layout/discover_activity_roller_view.xml
@@ -9,7 +9,7 @@
     tools:context="com.cyxbs.pages.discover.pages.RollerViewActivity">
 
     <include android:id="@+id/discover_web_tb"
-        layout="@layout/config_toolbar" />
+        layout="@layout/view_toolbar" />
 
     <com.cyxbs.components.base.webView.LiteJsWebView
         android:id="@+id/discover_web_view"
