--- a/cyxbs-pages/map/src/androidMain/res/layout/map_recycle_item_favorite_list.xml
+++ b/cyxbs-pages/map/src/androidMain/res/layout/map_recycle_item_favorite_list.xml
@@ -7,7 +7,7 @@
     android:background="?selectableItemBackground"
     android:clickable="true">
 
-    <com.cyxbs.components.config.view.MarqueeTextView
+    <com.cyxbs.components.view.text.MarqueeTextView
         android:id="@+id/map_tv_favorite_list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
