--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_find_password.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_find_password.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/mine_toolbar_security_find_password"
-        layout="@layout/config_toolbar" />
+        layout="@layout/view_toolbar" />
 
     <TextView
         android:id="@+id/mine_tv_security_find_first_title"
