--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_forget_password.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_forget_password.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/mine_fp_toolbar"
-        layout="@layout/config_toolbar" />
+        layout="@layout/view_toolbar" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/mine_security_et_forget_password"
