--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_setting.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_setting.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/config_toolbar" />
+            layout="@layout/view_toolbar" />
 
         <FrameLayout
             android:layout_width="match_parent"
