--- a/cyxbs-components/base/src/androidMain/res/layout/base_activity_crash.xml
+++ b/cyxbs-components/base/src/androidMain/res/layout/base_activity_crash.xml
@@ -65,7 +65,7 @@
         app:layout_constraintLeft_toLeftOf="@id/debug_tv_hint"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <com.cyxbs.components.config.view.ScaleScrollTextView
+    <com.cyxbs.components.view.text.ScaleScrollTextView
         android:id="@+id/debug_ssv_crash"
         android:layout_width="match_parent"
         android:layout_height="0dp"
