--- a/cyxbs-components/view/src/androidMain/res/layout/view_toolbar.xml
+++ b/cyxbs-components/view/src/androidMain/res/layout/view_toolbar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.cyxbs.components.config.view.JToolbar
+    <com.cyxbs.components.view.ui.JToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
