--- a/cyxbs-pages/course/src/androidMain/res/layout/course_dialog_bottom_affair.xml
+++ b/cyxbs-pages/course/src/androidMain/res/layout/course_dialog_bottom_affair.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.cyxbs.components.config.view.MarqueeTextView
+        <com.cyxbs.components.view.text.MarqueeTextView
             android:id="@+id/course_tv_dialog_affair_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
