--- a/cyxbs-pages/course/src/androidMain/res/layout/course_dialog_bottom_lesson_tea.xml
+++ b/cyxbs-pages/course/src/androidMain/res/layout/course_dialog_bottom_lesson_tea.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.cyxbs.components.config.view.MarqueeTextView
+        <com.cyxbs.components.view.text.MarqueeTextView
             android:id="@+id/course_tv_dialog_tea_course"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
