--- a/cyxbs-pages/emptyroom/src/androidMain/res/layout/emptyroom_activity_empty_room.xml
+++ b/cyxbs-pages/emptyroom/src/androidMain/res/layout/emptyroom_activity_empty_room.xml
@@ -52,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.cyxbs.components.config.view.JCardViewPlus
+        <com.cyxbs.components.view.layout.JCardViewPlus
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:shadowColor="@color/config_secondary_window_background"
@@ -90,7 +90,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.3" />
 
-        <com.cyxbs.components.config.view.JCardViewPlus
+        <com.cyxbs.components.view.layout.JCardViewPlus
             android:id="@+id/jc_building"
             android:layout_width="match_parent"
             android:layout_height="105dp"
