--- a/cyxbs-pages/home/src/androidMain/res/layout/home_fragment_course.xml
+++ b/cyxbs-pages/home/src/androidMain/res/layout/home_fragment_course.xml
@@ -36,7 +36,7 @@
                 tools:ignore="SmallSp"
                 tools:text="下节课" />
 
-            <com.cyxbs.components.config.view.MarqueeTextView
+            <com.cyxbs.components.view.text.MarqueeTextView
                 android:id="@+id/main_tv_course_header_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
                 tools:visibility="invisible"
                 app:layout_constraintVertical_bias="0.55" />
 
-            <com.cyxbs.components.config.view.MarqueeTextView
+            <com.cyxbs.components.view.text.MarqueeTextView
                 android:id="@+id/main_tv_course_header_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
