--- a/cyxbs-pages/map/src/androidMain/res/layout/map_fragment_favorite_edit.xml
+++ b/cyxbs-pages/map/src/androidMain/res/layout/map_fragment_favorite_edit.xml
@@ -88,7 +88,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.cyxbs.components.config.view.MarqueeTextView
+        <com.cyxbs.components.view.text.MarqueeTextView
             android:id="@+id/map_tv_favorite_place_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
