--- a/cyxbs-pages/map/src/androidMain/res/layout/map_fragment_place_detail_container.xml
+++ b/cyxbs-pages/map/src/androidMain/res/layout/map_fragment_place_detail_container.xml
@@ -47,7 +47,7 @@
                     android:paddingEnd="16dp">
 
 
-                    <com.cyxbs.components.config.view.MarqueeTextView
+                    <com.cyxbs.components.view.text.MarqueeTextView
                         android:id="@+id/map_tv_detail_place_name"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
