--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_change_password.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_change_password.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/mine_cp_toolbar"
-        layout="@layout/config_toolbar" />
+        layout="@layout/view_toolbar" />
 
 
     <androidx.appcompat.widget.AppCompatEditText
