--- a/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_edit_info.xml
+++ b/cyxbs-pages/mine/src/androidMain/res/layout/mine_activity_edit_info.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/mine_et_toolbar"
-        layout="@layout/config_toolbar" />
+        layout="@layout/view_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
