--- a/cyxbs-pages/news/src/androidMain/res/layout/news_activity_list.xml
+++ b/cyxbs-pages/news/src/androidMain/res/layout/news_activity_list.xml
@@ -6,7 +6,7 @@
     tools:context=".ui.activity.NewsListActivity">
 
     <include
-        layout="@layout/config_toolbar"
+        layout="@layout/view_toolbar"
         android:id="@+id/app_bar_layout" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
